# backend/routes/localLoginRoutes.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const { loginUser } = require('../controllers/loginLocal');
+const login1 = require('../controllers/loginLocal');
 
 
-router.post('/login' ,loginUser);
+router.post('/login' ,login1.loginUser);
+router.post('/logout',login1.logoutUser);
 
 module.exports = router;
